# data-toolset

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  codecov.yml  coverage.xml  pyproject.toml
.github/workflows/: master.yml
src/data_toolset/: main.py
src/data_toolset/utils/: avro.py  base.py  mixins.py  parquet.py  utils.py
tests/: sample_schema.avsc  utils.py
tests/data/: schema_invalid.avsc  schema_valid.avsc
tests/data/avro/: test-deflate.avro  test-snappy.avro  test.avro
tests/data/parquet/: test-gzip.parquet  test-snappy.parquet  test.parquet
tests/data/sample-data/: README.md
tests/integration/: test_avro.py  test_parquet.py
tests/unit/: test_avro.py  test_main.py  test_parquet.py
